# ET-GEN-AI-HACKATHON

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  HACKATHON_DELIVERABLES.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_platform_foundation.py
backend/opsbrain_backend/: __init__.py  main.py  worker.py
backend/opsbrain_backend/api/: auth.py  documents.py  events.py  graph.py  health.py  intelligence.py  query.py  status.py
backend/opsbrain_backend/auth/: __init__.py  dependencies.py  firebase.py  models.py  permissions.py
backend/opsbrain_backend/core/: config.py  errors.py  logging.py
backend/opsbrain_backend/db/: __init__.py  models.py  session.py
backend/opsbrain_backend/ingestion/: __init__.py  chunking.py  extractors.py
backend/opsbrain_backend/realtime/: __init__.py  bus.py  events.py
backend/opsbrain_backend/retrieval/: __init__.py  embeddings.py  gemini.py  service.py  store.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_health.py  test_intelligence.py  test_rag_flow.py  test_sse.py
backend/tests/contract/: test_existing_api_contract.py
backend/tests/unit/: test_chunking.py  test_config.py  test_events.py  test_firebase_auth.py  test_models.py  test_rbac.py  test_retrieval.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEMO_VIDEO_STORYBOARD.md  PRESENTATION_DECK.md  REQUIREMENTS_MATRIX.md  SUBMISSION_PACKAGE.md
src/: App.tsx  index.css  (+1 more)
(+49 files in other folders)
