[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "opsbrain-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.15,<2",
  "redis>=5.2,<7",
  "firebase-admin>=6.6,<8",
  "protobuf>=5.29.6,<6.34",
  "grpcio-status>=1.76,<1.77",
  "httpx>=0.28,<1"
  ,"python-multipart>=0.0.20,<1"
  ,"pypdf>=5.4,<7"
  ,"python-docx>=1.1,<2"
  ,"python-pptx>=1.0,<2"
  ,"openpyxl>=3.1,<4"
  ,"beautifulsoup4>=4.13,<5"
  ,"google-genai>=1.30,<2"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10", "pytest-asyncio>=0.25,<2", "ruff>=0.11,<1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["opsbrain_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
